# fastchan

./: Cargo.toml  README.md  pyproject.toml  simple.py  simple_map.py
python/fastchan/: __init__.py  _lowlevel.pyi  utils.py
python/fastchan/parallel/: common.py  parallel_map.py
python/fastchan/parallel_ops/: __init__.py  par_bridge.py  par_map.py
src/: channel.rs  lib.rs
