[package]
name = "fastchan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastchan"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.83"
crossbeam-channel = "0.5.13"
pyo3 = {version = "0.21", features = ["anyhow"]}
