[project]
name = "fastchan"
version = "0.1.0"
description = "Add your description here"
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
    "torch==2.3.0+cpu",
]

[tool.maturin]
python-source = "python"
module-name = "fastchan._lowlevel"
features = ["pyo3/extension-module"]

[[tool.rye.sources]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
